Module-2/L5/manifests/ingress.yaml
# We need an ingress resource to expose all our frontend/web services.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: www.goblincoln.com
      http:
        paths:
          - path: /pgadmin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80

          - path: /jupyterlab(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: jupyterlab-service
                port:
                  number: 80

          - path: /mongodb-express(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 8081

          - path: /nifi(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nifi-service
                port:
                  number: 8080
          - path: /nifi-p01(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nifi-service
                port:
                  number: 7001
